@@ -1,6 +1,8 @@
 0.7.1
 -----
 1. Fix bin path on Windows and macOS.
+2. Check bliss-analyser can be started on Linux, and if not don't allow
+   analysis from settings page.
 
 0.7.0
 -----
